--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
   "version": 2,
   "functions": {
-    "api/index.mjs": {
-      "runtime": "nodejs22.x",
-      "memory": 1024,
-      "maxDuration": 60
-    }
-  }
+    "api/**/*.mjs": { "runtime": "nodejs22.x" },
+    "api/**/*.js":  { "runtime": "nodejs22.x" }
+  },
+  "routes": [
+    { "src": "/api/(.*)", "dest": "/api/$1" }
+  ]
 }
