--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,6 @@
 {
   "version": 2,
-  "functions": {
-    "api/**/*.mjs": { "runtime": "nodejs22.x" },
-    "api/**/*.js":  { "runtime": "nodejs22.x" }
-  },
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1" }
+    { "src": "/api/(.*)", "dest": "api/index.mjs" }
   ]
 }
